# my-iridium

./: Cargo.toml  README.md
benches/: my-iridium.rs
docs/examples/: hlt.iasm
src/: README.md  cli.yml  instruction.rs  lib.rs  main.rs  readme.md  vm.rs
src/assembler/: README.md  directive_parsers.rs  errors.rs  instruction_parsers.rs  label_parsers.rs  mod.rs  opcode_parser.rs  opcode_parsers.rs  operand_parsers.rs  program_parsers.rs  register_parsers.rs  symbols.rs
src/remote/: README.md  client.rs  server.rs
src/repl/: README.md  mod.rs  readme.md
src/repl/command_parser/: mod.rs
src/scheduler/: README.md  mod.rs
