[package]
name = "my-iridium"
version = "0.1.27"
authors = ["yjhmelody <465402634@qq.com>"]

[dependencies]
nom = "4.1"
clap = {version = "2.32", features = ["yaml"]}
log = "0.4"
env_logger = "0.5"
byteorder = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
num_cpus = "1"

[dev-dependencies]
criterion = "0.2"

[[bin]]
name = "my-iridium"

[[bench]]
name = "my-iridium"
harness = false